methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:16: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:47: error: Unmatched closing brace '}' ignored here
}
^